First draft for the JNI change to support multiple trace version.