@@ -23,14 +23,14 @@ import org.eclipse.linuxtools.lttng.jni.common.Jni_C_Pointer;
  * JniParser is used to parse an event payload into something usable.<p>
  * 
  * All methods are static, the parser shouldn't be instantiated.
- * 
- * <b>NOTE</b><p>
- * This class is ABSTRACT, you need to extends it to support your specific LTTng version.<p>
- * 
  */
 public abstract class JniParser extends Jni_C_Common
 {
-    protected static native void ltt_getParsedData(int libId, ParsedObjectContent parseddata, long eventPtr, long markerFieldPtr);
+    protected static native void ltt_getParsedData(ParsedObjectContent parseddata, long eventPtr, long markerFieldPtr);
+
+	static {
+		System.loadLibrary("lttvtraceread_loader");
+	}
     
     // *** HACK ***
     // We cannot use "Object" directly as java does not support swapping primitive value
@@ -56,7 +56,7 @@ public abstract class JniParser extends Jni_C_Common
      * 
      * @return                  An Object that contain the JniEvent payload parsed by the C, or null, if if was impossible to parse (i.e., wrong position)
      * 
-     * @see org.eclipse.linuxtools.lttng.jni.JniEvent
+     * @see org.eclipse.linuxtools.lttng.jni.eclipse.linuxtools.lttng.jni.JniEvent
      */
     static public Object parseField(JniEvent eventToParse, int fieldPosition) {
         
@@ -68,7 +68,7 @@ public abstract class JniParser extends Jni_C_Common
         JniMarkerField tmpField = eventToParse.requestEventMarker().getMarkerFieldsArrayList().get(fieldPosition);
         
         // Call the parsing function in C. The result will be put in parsedData object
-        ltt_getParsedData(eventToParse.getEventPtr().getLibraryId(), parsedData, eventToParse.getEventPtr().getPointer(), tmpField.getMarkerFieldPtr().getPointer());
+        ltt_getParsedData(parsedData, eventToParse.getEventPtr().getPointer(), tmpField.getMarkerFieldPtr().getPointer() );
         
         return parsedData.getData();
     }
@@ -84,7 +84,7 @@ public abstract class JniParser extends Jni_C_Common
      * 
      * @return                  An Object that contain the JniEvent payload parsed by the C, or null, if if was impossible to parse (i.e., wrong position)
      * 
-     * @see org.eclipse.linuxtools.lttng.jni.JniEvent
+     * @see org.eclipse.linuxtools.lttng.jni.eclipse.linuxtools.lttng.jni.JniEvent
      */
     static public Object parseField(JniEvent eventToParse, String fieldName) {
         
@@ -95,7 +95,7 @@ public abstract class JniParser extends Jni_C_Common
             return null;
         }
         
-        ltt_getParsedData(eventToParse.getEventPtr().getLibraryId(), parsedData, eventToParse.getEventPtr().getPointer(), tmpField.getMarkerFieldPtr().getPointer());
+        ltt_getParsedData(parsedData, eventToParse.getEventPtr().getPointer(), tmpField.getMarkerFieldPtr().getPointer() );
         
         return parsedData.getData();
     }
@@ -110,7 +110,7 @@ public abstract class JniParser extends Jni_C_Common
      * @param   eventToParse    The jni event we want to parse.  
      * @return                  An HashMap of Object that contain the is the JniEvent's payload parsed by the C
      * 
-     * @see org.eclipse.linuxtools.lttng.jni.JniEvent
+     * @see org.eclipse.linuxtools.lttng.jni.eclipse.linuxtools.lttng.jni.JniEvent
      */
     static public HashMap<String, Object> parseAllFields(JniEvent eventToParse) {
         HashMap<String,JniMarkerField> markerFieldData = eventToParse.requestEventMarker().getMarkerFieldsHashMap();
@@ -130,14 +130,16 @@ public abstract class JniParser extends Jni_C_Common
 		//       HashMap<String, Object> parsedDataMap = (HashMap<String, Object>)markerFieldData.clone();
 		// Or even safer, use HashMap constructor to do so : 
         HashMap<String, Object> parsedDataMap = new HashMap<String, Object>(markerFieldData);
-		
+		 
+        String              newKey 	        = null; 
         JniMarkerField      newMarkerField  = null;
         Iterator<String>    iterator        = markerFieldData.keySet().iterator();
         
         while ( iterator.hasNext() ) {
-            newMarkerField = markerFieldData.get(iterator.next());
+            newKey = iterator.next();
+            newMarkerField = markerFieldData.get(newKey);
             // Call the C to parse the data
-            ltt_getParsedData(eventToParse.getEventPtr().getLibraryId(), parsedData, eventToParse.getEventPtr().getPointer(), newMarkerField.getMarkerFieldPtr().getPointer());
+            ltt_getParsedData(parsedData, eventToParse.getEventPtr().getPointer(), newMarkerField.getMarkerFieldPtr().getPointer() );
             // Save the result into the HashMap
             parsedDataMap.put(newMarkerField.getField(), parsedData.getData() );
         }
@@ -158,7 +160,8 @@ public abstract class JniParser extends Jni_C_Common
      * @param stringToAdd   The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addStringToParsingFromC(Object contentHolder, String stringToAdd) {
+    @SuppressWarnings("unused")
+    static private void addStringToParsingFromC(Object contentHolder, String stringToAdd) {
         ((ParsedObjectContent)contentHolder).setData( stringToAdd);
     }
 
@@ -174,7 +177,8 @@ public abstract class JniParser extends Jni_C_Common
      * @param pointerToAdd  The parsed data to add (in 64 bits long!)
      * @param formatToAdd   The format of the raw data
      */
-	static private void addLongPointerToParsingFromC(Object contentHolder, long pointerToAdd) {
+    @SuppressWarnings("unused")
+    static private void addLongPointerToParsingFromC(Object contentHolder, long pointerToAdd) {
         ((ParsedObjectContent)contentHolder).setData( new Jni_C_Pointer((long) pointerToAdd));
     }
 
@@ -190,7 +194,8 @@ public abstract class JniParser extends Jni_C_Common
      * @param pointerToAdd  The parsed data to add (converted in 64 bits long!)
      * @param formatToAdd   The format of the raw data
      */
-	static private void addIntPointerToParsingFromC(Object contentHolder, long pointerToAdd) {
+    @SuppressWarnings("unused")
+    static private void addIntPointerToParsingFromC(Object contentHolder, long pointerToAdd) {
         ((ParsedObjectContent)contentHolder).setData( new Jni_C_Pointer((int) pointerToAdd));
     }
 
@@ -206,8 +211,9 @@ public abstract class JniParser extends Jni_C_Common
      * @param shortToAdd    The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addShortToParsingFromC(Object contentHolder, short shortToAdd) {
-        ((ParsedObjectContent)contentHolder).setData( Short.valueOf(shortToAdd));
+    @SuppressWarnings("unused")
+    static private void addShortToParsingFromC(Object contentHolder, short shortToAdd) {
+        ((ParsedObjectContent)contentHolder).setData( new Short(shortToAdd));
     }
 
     /* 
@@ -222,8 +228,9 @@ public abstract class JniParser extends Jni_C_Common
      * @param intToAdd      The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addIntegerToParsingFromC(Object contentHolder, int intToAdd) {
-        ((ParsedObjectContent)contentHolder).setData( Integer.valueOf(intToAdd));
+    @SuppressWarnings("unused")
+    static private void addIntegerToParsingFromC(Object contentHolder, int intToAdd) {
+        ((ParsedObjectContent)contentHolder).setData( new Integer(intToAdd));
     }
 
     /* 
@@ -238,8 +245,9 @@ public abstract class JniParser extends Jni_C_Common
      * @param longToAdd     The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addLongToParsingFromC(Object contentHolder, long longToAdd) {
-        ((ParsedObjectContent)contentHolder).setData( Long.valueOf(longToAdd));
+    @SuppressWarnings("unused")
+    static private void addLongToParsingFromC(Object contentHolder, long longToAdd) {
+        ((ParsedObjectContent)contentHolder).setData( new Long(longToAdd));
     }
 
     /* 
@@ -254,7 +262,8 @@ public abstract class JniParser extends Jni_C_Common
      * @param floatToAdd    The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addFloatToParsingFromC(Object contentHolder, float floatToAdd) {
+    @SuppressWarnings("unused")
+    static private void addFloatToParsingFromC(Object contentHolder, float floatToAdd) {
         ((ParsedObjectContent)contentHolder).setData( new Float(floatToAdd));
     }
 
@@ -271,12 +280,12 @@ public abstract class JniParser extends Jni_C_Common
      * @param doubleToAdd   The parsed data to add
      * @param formatToAdd   The format of the raw data
      */
-	static private void addDoubleToParsingFromC(Object contentHolder, double doubleToAdd) {
+    @SuppressWarnings("unused")
+    static private void addDoubleToParsingFromC(Object contentHolder, double doubleToAdd) {
         ((ParsedObjectContent)contentHolder).setData( new Double(doubleToAdd));
     }
     
 }
-
 
 /**
  * <b><u>ParsedObjectContent</u></b><p>
